<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cabecalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dip">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/tras_logo_small"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rodape"
            android:gravity="bottom" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">


           <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/tras_logo_small"
                    android:gravity="center" />

            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiUsuario"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <EditText
                        android:id="@+id/etUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtUsuario" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiSenha"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtSenha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/entrarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/txtEntrar"
                    android:textColor="@color/icons" />

                <Button
                    android:id="@+id/btnCadastrarLogin"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/txtCadastrar_se" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivBiometria"
                android:layout_width="70dp"
                android:alpha="0.3"
                android:visibility="invisible"
                android:layout_height="70dp"
                android:src="@drawable/biometria"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>